further CG development